--- a/main.html
+++ b/main.html
@@ -2,107 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zagros-OS | Version dev 0.1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Zagros-OS</title>
   <style>
+    /* Reset and basic styles */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #0d1117;
-      color: #c9d1d9;
+      background: #ffffff;
+      color: #222;
+      line-height: 1.6;
     }
     header {
-      background-color: #161b22;
-      padding: 20px;
+      background: #f5f5f5;
+      padding: 20px 0;
       text-align: center;
+      border-bottom: 1px solid #ddd;
     }
     header h1 {
       margin: 0;
-      color: #58a6ff;
+      font-weight: normal;
+      font-size: 2.5rem;
+      color: #007acc;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.1rem;
+      color: #555;
     }
     nav {
-      background-color: #21262d;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 10px;
+      background: #007acc;
+      padding: 10px 0;
+      text-align: center;
     }
     nav a {
-      color: #8b949e;
+      color: white;
+      margin: 0 15px;
       text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #58a6ff;
+      color: #ff6600;
+    }
+    main {
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 0 15px;
     }
     section {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 10px;
-      background-color: #161b22;
-      border-radius: 8px;
+      margin-bottom: 40px;
+    }
+    section h2 {
+      border-bottom: 2px solid #007acc;
+      padding-bottom: 8px;
+      margin-bottom: 15px;
+      color: #007acc;
+    }
+    ul {
+      padding-left: 20px;
     }
     footer {
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #6e7681;
+      font-size: 0.9rem;
+      padding: 20px 0;
+      border-top: 1px solid #ddd;
+      color: #777;
+      margin-top: 50px;
+    }
+    a.download-link {
+      display: inline-block;
+      background: #007acc;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    a.download-link:hover {
+      background: #005f99;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Zagros-OS</h1>
-    <p>Version: <strong>dev 0.1</strong></p>
-  </header>
+<header>
+  <h1>Zagros-OS</h1>
+  <p>Version: dev 0.1 — A simple assembly-based operating system</p>
+</header>
 
-  <nav>
-    <a href="#welcome">Welcome</a>
-    <a href="#about">About</a>
-    <a href="#features">Features</a>
-    <a href="#download">Download</a>
-    <a href="#contribute">Contribute</a>
-  </nav>
+<nav>
+  <a href="#about">About</a>
+  <a href="#features">Features</a>
+  <a href="#download">Download</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <section id="welcome">
-    <h2>👋 Welcome</h2>
-    <p>Zagros-OS is a new 32-bit operating system written in Assembly, built from scratch for learning, speed, and full control.</p>
-  </section>
-
+<main>
   <section id="about">
-    <h2>🧠 About Zagros-OS</h2>
-    <p>This OS is under heavy development. The goal is to create a minimalist but powerful kernel using x86 Assembly and run directly on hardware.</p>
-    <p>Version <code>dev 0.1</code> is the first developer preview.</p>
+    <h2>About Zagros-OS</h2>
+    <p>Zagros-OS is a lightweight 32-bit operating system written mostly in assembly language. It is designed to be minimal, fast, and easy to understand — perfect for OS learners and developers.</p>
   </section>
 
   <section id="features">
-    <h2>✨ Features</h2>
+    <h2>Features</h2>
     <ul>
-      <li>🖥️ VGA Graphics Mode (320x200)</li>
-      <li>🧾 Simple welcome screen</li>
-      <li>⌨️ Basic keyboard input (planned)</li>
-      <li>💾 Bare metal boot from floppy/ISO</li>
-      <li>🛠️ Written 100% in Assembly</li>
+      <li>Simple VGA graphics mode</li>
+      <li>Keyboard input support</li>
+      <li>Minimal bootloader and kernel</li>
+      <li>Efficient memory usage (under 100 MB RAM)</li>
+      <li>Open-source and actively developed</li>
     </ul>
-    <img src="vga-sample.png" alt="VGA Sample" style="width:100%; border-radius: 5px; margin-top: 10px;" />
-    <p style="font-size: 14px; color: #8b949e;">Above: Sample VGA welcome screen (simulated)</p>
   </section>
 
   <section id="download">
-    <h2>📦 Download</h2>
-    <p>You can try Zagros-OS in an emulator like QEMU or VirtualBox.</p>
-    <p><a href="https://github.com/your-username/zagros-os/releases" style="color:#58a6ff;">Download from GitHub Releases</a></p>
+    <h2>Download</h2>
+    <p>Try Zagros-OS today! Run it on your favorite emulator like QEMU or VirtualBox.</p>
+    <a href="https://github.com/your-username/zagrosOS/releases" target="_blank" class="download-link">Download Latest Release</a>
   </section>
 
-  <section id="contribute">
-    <h2>🤝 Contribute</h2>
-    <p>Zagros-OS is open-source. Contributions are welcome!</p>
-    <p><a href="https://github.com/your-username/zagros-os" style="color:#58a6ff;">View the Source Code on GitHub</a></p>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Questions, contributions, or feedback? Feel free to reach out on <a href="https://github.com/your-username/zagrosOS" target="_blank">GitHub</a>.</p>
   </section>
+</main>
 
-  <footer>
-    Made with 🧠 by Kurd – 2025
-  </footer>
+<footer>
+  &copy; 2025 Zagros-OS Project. All rights reserved.
+</footer>
 
 </body>
 </html>
